--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
         
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/11_AS221S5_T07_be:latest .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/11_as221s5_t07_be:latest .
         
       - name: Push Docker image to Docker Hub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/11_AS221S5_T07_be:latest
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/11_as221s5_t07_be:latest
